--- a/manifest.json
+++ b/manifest.json
@@ -4,17 +4,6 @@
   "start_url": "/RepoPWA1908/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
-  "icons": [
-    {
-      "src": "/RepoPWA1908/icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/RepoPWA1908/icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+  "theme_color": "#4CAF50"
   ]
 }
